Store historical data in sqlite