@@ -11,6 +11,7 @@
         <maven.compiler.release>25</maven.compiler.release>
         <native.maven.plugin.version>1.1.5</native.maven.plugin.version>
         <picocli.version>4.7.7</picocli.version>
+        <sqlite.jdbc.version>3.53.1.0</sqlite.jdbc.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -19,6 +20,11 @@
             <groupId>info.picocli</groupId>
             <artifactId>picocli</artifactId>
             <version>${picocli.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>${sqlite.jdbc.version}</version>
         </dependency>
     </dependencies>
 
@@ -56,7 +62,11 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>info.fkhodkov.rates.ExchangeRateApp</mainClass>
+                                    <manifestEntries>
+                                        <Enable-Native-Access>ALL-UNNAMED</Enable-Native-Access>
+                                    </manifestEntries>
                                 </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                             </transformers>
                         </configuration>
                     </execution>
@@ -89,6 +99,7 @@
                             <imageName>rouble-rate-calculator</imageName>
                             <buildArgs>
                                 <buildArg>-H:+AddAllCharsets</buildArg>
+                                <buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
                             </buildArgs>
                         </configuration>
                     </plugin>
